# llm-manifesto

./: CLAUDE.md  Justfile  README.md  pyproject.toml
.github/workflows/: ci.yml
clusters/: cks-h200.yaml  oci-gb200.yaml
config/: images.yaml
dev/: Containerfile  dev-pod.yaml
manifesto/: __init__.py  cli.py  cluster.py  dp_ports.py  equations.py  images.py  instance.py  launch.py  normalize.py  overrides.py  parallelism.py  resolve.py  spec.py  warnings.py  workflow.py
manifesto/render/: __init__.py  base.py  common.py  devpod.py  emit.py  lws.py  routing.py  sidecars.py
models/deepseek-v4/: 1P-EP8-1D-EP8.yaml  2P-EP8-1D-EP8.yaml  3P-EP8-1D-EP16.yaml  3P-EP8-1D-EP8.yaml  3P-EP8-2D-EP16.yaml  wide-ep-base.yaml
models/deepseek-v4-gb200/: aggregated.yaml  llmd-oci-3p2d-dep8-dep16-flashinfer.yaml  llmd-oci-high-tpt.yaml  llmd-oci-max-tpt.yaml  llmd-oci-mid-curve.yaml  pd.yaml
models/qwen/: aggregated.yaml  h200-aggregated.yaml
monitoring/: wideep-overview-dashboard.yaml
tests/: test_cli.py  test_cluster_customization.py  test_dp_ports.py  test_instance.py  test_overrides.py  test_render.py  test_ux.py  test_validation.py
