# Python package metadata and tool configuration for the manifesto renderer.
[project]
name = "llm-manifesto"
version = "0.2.0"
description = "Personal llm-d/vLLM deployment renderer"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7",
  "pyyaml>=6.0",
]

[project.scripts]
manifesto = "manifesto.cli:main"

[project.optional-dependencies]
test = [
  "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["manifesto"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
